--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ build/
 /captures
 .externalNativeBuild
 .cxx
+/.idea/.gitignore
+/.idea/compiler.xml
+/.idea/deploymentTargetDropDown.xml
+/.idea/gradle.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/.idea/vcs.xml
